# KeycapEmu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  generate.bat  generate2.bat
cmake/: FindFlatmessage.cmake  FlatmessageCompile.cmake
contrib/crow/: crow.h
contrib/crow/crow_include/: socket_adaptors.h
docs/codegen/: protocol.md
src/: CMakeLists.txt
src/Accountserver/: AccountService.hpp  CMakeLists.txt  Connection.hpp  Version.hpp  connection.cpp  main.cpp
src/Logonserver/: AccountConnection.cpp  AccountConnection.hpp  AccountService.hpp  CMakeLists.txt  ClientConnection.hpp  Connection.cpp  Connection.hpp  LogonService.hpp  Version.hpp  account_connection.hpp  client_connection.cpp  client_connection.hpp  clientconnection.cpp  logonservice.cpp  main.cpp
src/Logonserver/Cli/: Account.cpp  Help.cpp  Registrar.hpp
src/Logonserver/Protocol/: Logon.msg  LogonChallange.msg
src/Shared/: CMakeLists.txt  Permissions.scm
src/Shared/Cli/: Command.hpp  Handler.cpp  Handler.hpp  Helpers.hpp  helpers.cpp
src/Shared/Database/: Database.hpp  PreparedStatement.hpp
src/Shared/Database/DAOs/: User.hpp
src/Shared/Database/DAOs/Base/: User.hpp
src/Shared/Database/DAOs/MySQL/: User.cpp  User.hpp
src/Shared/Database/MySQL/: Database.cpp  Database.hpp  PreparedStatement.cpp  PreparedStatement.hpp
src/Shared/Database/Schemata/: User.scm
src/Shared/Rbac/: Role.hpp
src/account_messaging/: CMakeLists.txt  am_service.cpp  am_service.hpp  main.cpp
src/accountserver/: CMakeLists.txt  account.json  account_service.hpp  character_id_provider.cpp  character_id_provider.hpp  connection.cpp  connection.hpp  main.cpp
src/accountserver/cli/: account.cpp  help.cpp  registrar.hpp
src/accountserver/network/: account_service.hpp  connection.cpp  connection.hpp
src/knowledge_base/: CMakeLists.txt  kb.json  kb_servce.hpp  kb_service.cpp  main.cpp
src/lib/Utility/: Version.cpp.in  version.cpp.in
src/logonserver/: CMakeLists.txt  account_connection.cpp  account_connection.hpp  account_service.hpp  client_connection.cpp  client_connection.hpp  logon.json  logon_service.cpp  logon_service.hpp  main.cpp  realm_manager.cpp  realm_manager.hpp
src/logonserver/authentication/: pin_authenticator.cpp  pin_authenticator.hpp
src/logonserver/cli/: account.cpp  help.cpp  registrar.hpp
src/logonserver/network/: client_connection.cpp  client_connection.hpp  logon_service.cpp  logon_service.hpp  realm_connection.cpp  realm_connection.hpp  realm_service.cpp  realm_service.hpp
src/logonserver/network/client_states/: authenticated.cpp  challanged.cpp  disconnected.cpp  just_connected.cpp  transferring.cpp
src/logonserver/protocol/: logon.msg
src/realmserver/: CMakeLists.txt  client_connection.cpp  client_connection.hpp  client_service.cpp  client_service.hpp  main.cpp  realm.json
src/realmserver/handlers/: character_handler.cpp  character_handler.hpp  realm_handler.hpp
src/realmserver/network/: client_connection.cpp  client_connection.hpp  client_service.cpp  client_service.hpp  handler.cpp  handler.hpp  login_queue.cpp  login_queue.hpp  player_session.cpp  player_session.hpp
src/realmserver/network/client_states/: authenticated.cpp  disconnected.cpp  just_connected.cpp
src/realmserver/protocol/: authentication.msg  character_select.msg  realm_protocol.msg
src/shared/: CMakeLists.txt  crash_dump.cpp  crash_dump.hpp  version.hpp
src/shared/cli/: command.hpp  handler.cpp  handler.hpp  helpers.cpp  helpers.hpp
src/shared/cryptography/: packet_scrambler.cpp  packet_scrambler.hpp
src/shared/database/: database.hpp  prepared_statement.hpp
src/shared/database/daos/: character.hpp  knowledge_base.hpp  realm.hpp  user.hpp  user_telemetry.hpp
src/shared/database/daos/base/: character.hpp  knowledge_base.hpp  realm.hpp  user.hpp  user_telemetry.hpp
src/shared/database/daos/mysql/: character.cpp  character.hpp  knowledge_base.cpp  knowledge_base.hpp  realm.cpp  realm.hpp  user.cpp  user.hpp  user_telemetry.cpp  user_telemetry.hpp
src/shared/database/mysql/: database.cpp  prepared_statement.cpp  prepared_statement.hpp
src/shared/database/schemata/: character.scm  knowledge_base.scm  realm.scm  user.scm  user_telemetry.scm
src/shared/logging/: utility.cpp  utility.hpp
src/shared/network/: protocol.msg  server.msg  services.hpp  shared_protocol.msg  state_result.hpp
src/shared/network/protocol/: client.msg  network_constants.msg  server.msg  shared_protocol.msg
src/shared/rbac/: rbac.hpp  role.hpp
src/tools/: CMakeLists.txt
src/tools/client/: CMakeLists.txt  main.cpp
src/tools/dbc_to_sql/: Dbc.cs  DbcBuilder.cs  Program.cs  SqlBuilder.cs  WowTypes.cs
src/tools/dbc_to_sql/schemata/: AnimationData.xml  AreaPOI.xml  AreaTable.xml  AreaTrigger.xml  AttackAnimKits.xml  AttackAnimTypes.xml  AuctionHouse.xml  BankBagSlotPrices.xml  BattlemasterList.xml  CameraShakes.xml  Cfg_Categories.xml  Cfg_Configs.xml  CharBaseInfo.xml  CharHairGeosets.xml  CharHairTextures.xml  CharSections.xml  CharStartOutfit.xml  CharTitles.xml  CharVariations.xml  CharacterFacialHairStyles.xml  ChatChannels.xml  ChatProfanity.xml  ChrClasses.xml  ChrRaces.xml  CinematicCamera.xml  CinematicSequences.xml  CreatureDisplayInfo.xml  CreatureDisplayInfoExtra.xml  CreatureFamily.xml  CreatureModelData.xml  CreatureSoundData.xml  CreatureSpellData.xml  CreatureType.xml  DeathThudLookups.xml  DeclinedWord.xml  DeclinedWordCases.xml  DurabilityCosts.xml  DurabilityQuality.xml  Emotes.xml  EmotesText.xml  (+144 more)
src/worldserver/: CMakeLists.txt  client_connection.cpp  client_connection.hpp  client_service.cpp  client_service.hpp  main.cpp  world.json
templates/: db_mysql.template  db_object.template  hpp.template
templates/hpp_helpers/: dump_attributes.template  dump_decode.template  dump_encode.template  dump_encode_issize.template  dump_helpers.template  dump_to_string.template
tmp/: config.json
